# cargo-fresh

./: .gitignore  CHANGELOG.md  CLAUDE.md  COMPLETION.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PUBLISH_CHECKLIST.md  README.md  README.zh.md  ROADMAP.md  SECURITY.md  build.sh  deny.toml  install_completion.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  crate.yml  github-release.yml  homebrew-release.yml  publish.yml  release.yml
completion/: cargo-fresh.nu  fresh.nu  pkg-checker-completions.nu
docs/: 1.0-contract.md  json-schema.json
docs/superpowers/plans/: 2026-05-19-crates2-install-opts-preservation.md  2026-05-22-json-contract-1.0-additions.md
docs/superpowers/specs/: 2026-05-19-crates2-install-opts-preservation-design.md  2026-05-22-json-contract-1.0-additions-design.md
src/: errors.rs  lib.rs  main.rs
src/cli/: mod.rs
src/display/: mod.rs
src/downloader/: archive.rs  events.rs  fetch.rs  github_api.rs  install.rs  mod.rs  probe.rs  resolve.rs  token.rs
src/locale/: detection.rs  language.rs  mod.rs  texts.rs
src/models/: mod.rs
src/package/: binstall_probe.rs  crates2.rs  crates_api.rs  crates_toml.rs  mod.rs  registry.rs  sparse_index.rs
src/ui/: download_view.rs  mod.rs
src/updater/: mod.rs
tests/: cli.rs  cli_snapshots.rs  concurrent_smoke.rs  downloader_fetch.rs  downloader_install.rs  github_api_http.rs  json_schema.rs  probe_http.rs  sparse_index_http.rs  token_discovery.rs
tests/fixtures/: mkfixtures.sh
tests/snapshots/: cli_snapshots__snapshot_failed_line.snap  cli_snapshots__snapshot_fallback_line.snap  cli_snapshots__snapshot_finished_summary.snap  cli_snapshots__snapshot_fresh_line.snap  cli_snapshots__snapshot_skip_line_git.snap  cli_snapshots__snapshot_skip_line_unknown_source.snap  cli_snapshots__snapshot_updating_line_clean.snap  cli_snapshots__snapshot_updating_line_with_binstall_prebuilt.snap  cli_snapshots__snapshot_updating_line_with_prebuilt.snap
