[package]
name = "cargo-fresh"
version = "0.10.0"
edition = "2021"
rust-version = "1.85"
description = "A Rust tool for checking and updating globally installed Cargo packages with interactive mode and smart prerelease detection"
documentation = "https://docs.rs/cargo-fresh"
readme = "README.md"
homepage = "https://github.com/jenkinpan/cargo-fresh"
repository = "https://github.com/jenkinpan/cargo-fresh"
license = "Apache-2.0"
keywords = ["cargo", "manager", "package", "rust", "update"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "cargo-fresh"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["cargo", "derive"] }
clap_complete = "4.5.58"
clap_complete_nushell = "4.5"
colored = "3.0.0"
dialoguer = "0.12.0"
globset = "0.4"
indicatif = "0.18"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
semver = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", default-features = false, features = ["macros", "rt-multi-thread", "signal", "process", "time", "sync"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
insta = { version = "1", features = ["filters"] }
predicates = "3"
wiremock = "0.6"
tokio = { version = "1.47.1", default-features = false, features = ["macros", "rt-multi-thread"] }
