[package]
name = "cargo-fresh"
version = "0.12.7"
edition = "2021"
rust-version = "1.88"
description = "A Rust tool for checking and updating globally installed Cargo packages with interactive mode and smart prerelease detection"
documentation = "https://docs.rs/cargo-fresh"
readme = "README.md"
homepage = "https://github.com/jenkinpan/cargo-fresh"
repository = "https://github.com/jenkinpan/cargo-fresh"
license = "Apache-2.0"
keywords = ["cargo", "manager", "package", "rust", "update"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "cargo-fresh"
path = "src/main.rs"

[dependencies]
anstream = "1.0"
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["cargo", "derive"] }
clap_complete = "4.5.58"
clap_complete_nushell = "4.5"
clap_mangen = "0.3"
colored = "3.0.0"
dialoguer = "0.12.0"
globset = "0.4"
indicatif = "0.18"
reqwest = { version = "0.13", default-features = false, features = [
  "rustls",
  "stream",
  "json",
] }
flate2 = "1"
tar = "0.4"
zip = { version = "8", default-features = false, features = ["deflate"] }
sha2 = "0.11"
futures-util = "0.3"
tempfile = "3"
semver = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", default-features = false, features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "process",
  "time",
  "sync",
] }
toml = { version = "1.1", default-features = false, features = [
  "parse",
  "serde",
] }
thiserror = "2"

# Ship a small, fast prebuilt binary. Fat LTO + a single codegen unit maximize
# cross-crate inlining/dead-code elimination; `strip` drops symbols. We do NOT
# set `panic = "abort"`: the progress-bar teardown (`PbGuard` Drop, terminal
# restore) and `tempfile` cleanup run on unwind, and aborting would skip them.
[profile.release]
lto = true
codegen-units = 1
strip = true

# Curated, opt-in clippy lints beyond the default set (CI enforces these via
# `-D warnings`). Kept to stable, low-noise, mostly-autofixable style lints —
# deliberately not blanket `pedantic`/`nursery`, which flood doc-backtick and
# `# Errors`-section noise that carries no value for a binary crate.
[lints.clippy]
uninlined_format_args = "warn"
redundant_closure = "warn"
map_unwrap_or = "warn"
manual_let_else = "warn"

[dev-dependencies]
assert_cmd = "2"
insta = { version = "1", features = ["filters"] }
jsonschema = { version = "0.46.5", default-features = false }
predicates = "3"
serial_test = "3"
tokio = { version = "1.47.1", default-features = false, features = [
  "macros",
  "rt-multi-thread",
] }
wiremock = "0.6"
